--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="grid">
       <!-- Substitua pelas suas imagens -->
       <img src="assets/art1.png" alt="Arte 1" data-aos="zoom-in">
-      <img src="assets/post2.jpg" alt="Arte 2" data-aos="zoom-in">
+      <img src="assets/art2.png" alt="Arte 2" data-aos="zoom-in">
       
     </div>
   
