--- a/index.html
+++ b/index.html
@@ -7,22 +7,21 @@
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Grenze+Gotisch:wght@100..900&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <header>
     <h1>DEXTHEORY</h1>
+    <h3>Graphic Design | Illustrator | IT Analist</h3>
   </header>
 
   <section class="content">
-    <h2 data-aos="fade-up">Últimos Trabalhos</h2>
-    <div class="grid">
-      <!-- Substitua pelas suas imagens -->
-      <img src="assets/art1.png" alt="Arte 1" data-aos="zoom-in">
-      <img src="assets/art2.png" alt="Arte 2" data-aos="zoom-in">
-      
-    </div>
-  
+  <div class="grid">
+    <!-- Substitua pelas suas imagens -->
+    <img src="assets/img/art1.png" alt="Arte 1" data-aos="zoom-in">
+    <img src="assets/img/art2.png" alt="Arte 2" data-aos="zoom-in">
+    <img src="assets/img/art3.png" alt="Arte 3" data-aos="zoom-in">
+  </div>
 </section>
 
 <div class="background">
@@ -44,9 +43,12 @@
   
 <footer>
     <p>Desenvolvido por DexTheory ©2025</p>
-  </footer>
+</footer>
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
   <script src="script.js"></script>
 </body>
 </html>
