update: add favicon and icons

--- a/index.html
+++ b/index.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DexTheory | Portfólio</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-</head>
+<html lang="pt-BR"> <!-- Language set to Brazilian Portuguese -->
+<head> <!-- Metadata and links for the portfolio page -->
+  <meta name="description" content="Portfólio de DexTheory, um designer gráfico e ilustrador. Veja minhas artes e projetos."> <!-- Description of the portfolio -->
+  <meta charset="UTF-8"> <!-- Character encoding for the document -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsive design for mobile devices -->
+  <meta name="author" content="DexTheory"> <!-- Author of the portfolio -->
+  
+  <title>DexTheory | Portfólio</title> <!-- Title of the portfolio page -->
+  
+  <!-- Favicon padrão para navegadores -->
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="48x48" href="assets/icons/favicon-48x48.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="assets/icons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="128x128" href="assets/icons/favicon-128x128.png">
+
+  <!-- Ícone para Apple (iPhone/iPad) -->
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/favicon-180x180.png">
+
+  <!-- Ícone para Android / Web Apps -->
+  <link rel="icon" type="image/png" sizes="192x192" href="assets/icons/favicon-192x192.png"> 
+
+  <!-- Ícone principal para PWA -->
+  <link rel="icon" type="image/png" sizes="512x512" href="/assets/icons/favicon-512x512.png">
+  <link rel="manifest" href="manifest.json"> <!-- Manifest file for Progressive Web App (PWA) support -->
+
+  <!-- SVG moderno (opcional) -->
+  <link rel="icon" type="image/svg+xml" href="assets/icons/artdex.svg" sizes="any"> <!-- SVG icon for modern browsers -->
+  <link rel="shortcut icon" href="assets/icons/artdex.svg" sizes="any"> <!-- Fallback for older browsers -->
+
+  <!-- CSS e fontes -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css"> <!-- AOS library for animations -->
+  <link rel="stylesheet" href="style.css"> <!-- Custom CSS for the portfolio -->
+  <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- Preconnect to Google Fonts for performance -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!-- Preconnect to Google Fonts with CORS -->  
+
+  </head>
 
 <body>
   <header>
@@ -17,38 +45,20 @@
 
   <section class="content">
   <div class="grid">
-    <!-- Substitua pelas suas imagens -->
+    <!-- ARTES -->
     <img src="assets/img/art1.png" alt="Arte 1" data-aos="zoom-in">
     <img src="assets/img/art2.png" alt="Arte 2" data-aos="zoom-in">
     <img src="assets/img/art3.png" alt="Arte 3" data-aos="zoom-in">
   </div>
 </section>
-
-<div class="background">
-   <span></span>
-   <span></span>
-   <span></span>
-   <span></span>
-   <span></span>
-   <span></span>
-   <span></span>
-   <span></span>
-   <span></span>
-   <span></span>
-   <span></span>
-   <span></span>
-   <span></span>
-   <span></span>
-</div>
   
 <footer>
-    <p>Desenvolvido por DexTheory ©2025</p>
+    Desenvolvido por <strong>DexTheory</strong> ©2025 <!-- Footer with developer credit -->
+    <br>
+    Todos os direitos reservados. <!-- Copyright notice -->
 </footer>
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>
-    AOS.init();
-  </script>
   <script src="script.js"></script>
 </body>
 </html>
