--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head> <!-- Metadata and links for the portfolio page -->
   <meta name="description" content="Portfólio de DexTheory, um designer gráfico e ilustrador. Veja minhas artes e projetos."> <!-- Description of the portfolio -->
   <meta charset="UTF-8"> <!-- Character encoding for the document -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsive design for mobile devices -->
+  <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Responsive design for mobile devices -->
   <meta name="author" content="DexTheory"> <!-- Author of the portfolio -->
   
   <title>DexTheory | Portfólio</title> <!-- Title of the portfolio page -->
   
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"> <!-- Bootstrap CSS for responsive design and styling -->
+
   <!-- Favicon padrão para navegadores -->
   <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
@@ -23,7 +25,6 @@
 
   <!-- Ícone principal para PWA -->
   <link rel="icon" type="image/png" sizes="512x512" href="/assets/icons/favicon-512x512.png">
-  <link rel="manifest" href="manifest.json"> <!-- Manifest file for Progressive Web App (PWA) support -->
 
   <!-- SVG moderno (opcional) -->
   <link rel="icon" type="image/svg+xml" href="assets/icons/artdex.svg" sizes="any"> <!-- SVG icon for modern browsers -->
@@ -57,7 +58,7 @@
     <br>
     Todos os direitos reservados. <!-- Copyright notice -->
 </footer>
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script> <!-- Bootstrap JS for interactivity -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="script.js"></script>
 </body>
