--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR"> <!-- Language set to Brazilian Portuguese -->
 <head> <!-- Metadata and links for the portfolio page -->
-  <meta name="description" content="Portfólio de DexTheory, um designer gráfico e ilustrador. Veja minhas artes e projetos."> <!-- Description of the portfolio -->
+  <meta name="description" content="Seja Bem-Vindo ao meu Portfólio aqui você encontrará minhas Artes e Projetos de Design Gráfico."> <!-- Description of the portfolio -->
   <meta charset="UTF-8"> <!-- Character encoding for the document -->
   <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Responsive design for mobile devices -->
   <meta name="author" content="DexTheory"> <!-- Author of the portfolio -->
@@ -36,10 +36,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- Preconnect to Google Fonts for performance -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!-- Preconnect to Google Fonts with CORS -->  
 
-  </head>
-
+</head> 
+<!-- ====================================================================================================================================================== -->
 <body>
-  <header>
+  <header> 
     <h1>DEXTHEORY</h1>
     <h3>Graphic Design | Illustrator | IT Analist</h3>
   </header>
