--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
   <header> 
     <h1>DEXTHEORY</h1>
-    <h3>Graphic Design | Illustrator | IT Analist</h3>
+    <h3>DESIGNER GRÁFICO ❖ ILUSTRADOR ❖ UX DESIGNER</h3>
   </header>
 
   <section class="content">
@@ -52,14 +52,18 @@
     <img src="assets/img/art3.png" alt="Arte 3" data-aos="zoom-in">
   </div>
 </section>
-  
+
+<!-- Footer with developer information -->
 <footer>
-    Desenvolvido por <strong>DexTheory</strong> ©2025 <!-- Footer with developer credit -->
+    Desenvolvido por <strong>DexTheory</strong> ©2025
     <br>
-    Todos os direitos reservados. <!-- Copyright notice -->
+    Todos os direitos reservados.
 </footer>
+  
+  <!-- Scripts for functionality and animations -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script> <!-- Bootstrap JS for interactivity -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="script.js"></script>
+
 </body>
 </html>
