--- a/index.html
+++ b/index.html
@@ -52,17 +52,11 @@
   <section class="content">
   <div class="grid">
     <!-- ARTES -->
-    <img src="assets/img/art1.png" alt="Arte 1" data-aos="zoom-in"
-     data-aos-offset="450"
-     data-aos-easing="ease-in-sine">
-    <img src="assets/img/art2.png" alt="Arte 2" data-aos="zoom-in"
-     data-aos-offset="450"
-     data-aos-easing="ease-in-sine">
-    <img src="assets/img/art3.png" alt="Arte 3" data-aos="zoom-in"
-     data-aos-offset="450"
-     data-aos-easing="ease-in-sine">
+    <img src="assets/img/art1.png" alt="Arte 1" data-aos="zoom-in" data-aos-delay="75">
+    <img src="assets/img/art2.png" alt="Arte 2" data-aos="zoom-in" data-aos-delay="75">
+    <img src="assets/img/art3.png" alt="Arte 3" data-aos="zoom-in" data-aos-delay="75">
   </div>
-</section>
+  </section>
 
 <!-- Footer with developer information -->
 <footer>
