--- a/index.html
+++ b/index.html
@@ -34,27 +34,26 @@
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css"> <!-- AOS library for animations -->
   <link rel="stylesheet" href="style.css"> <!-- Custom CSS for the portfolio -->
   <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- Preconnect to Google Fonts for performance -->
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!-- Preconnect to Google Fonts with CORS -->  
-
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> <!-- AOS library for scroll animations -->  
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!-- Preconnect to Google Fonts with CORS -->
+  <link href="https://fonts.googleapis.com/css2?family=Grenze+Gotisch:wght@100..900&display=swap" rel="stylesheet">  <!-- Custom font from Google Fonts -->
 
 </head> 
 <!-- ====================================================================================================================================================== -->
 <body>
   <header>
-    <img class="logo" src="assets/icons/artdex.svg" alt="Logo DexTheory" data-aos="fade-up-right"> <!-- Logo of DexTheory with fade-down animation -->
-      <div class="header-titles" data-aos="fade-down-left"> <!-- Header titles with fade-up animation -->
-      <h1>DEXTHEORY</h1>
-      <h3><em>ILLUSTRATOR & UX DESIGNER</em></h3>
+    <img class="logo" src="assets/icons/artdex.svg" alt="Logo DexTheory" data-aos="fade-down" data-aos-duration="1000"> <!-- Logo of DexTheory with fade-down animation -->
+      <div class="animationDataAOS" data-aos="fade-down" data-aos-duration="1000">
+        <h1>exTheory</h1>
+      <h3>ILLUSTRATOR & UX DESIGNER</h3>
     </div>
   </header>
 
   <section class="content">
   <div class="grid">
     <!-- ARTES -->
-    <img src="assets/img/art1.png" alt="Arte 1" data-aos="zoom-in" data-aos-delay="75">
-    <img src="assets/img/art2.png" alt="Arte 2" data-aos="zoom-in" data-aos-delay="75">
-    <img src="assets/img/art3.png" alt="Arte 3" data-aos="zoom-in" data-aos-delay="75">
+    <img src="assets/img/art1.png" alt="Arte 1" data-aos="zoom-in" data-aos-duration="1200">
+    <img src="assets/img/art2.png" alt="Arte 2" data-aos="zoom-in" data-aos-duration="1300">
+    <img src="assets/img/art3.png" alt="Arte 3" data-aos="zoom-in" data-aos-duration="1400">
   </div>
   </section>
 
