--- a/index.html
+++ b/index.html
@@ -1,75 +1,95 @@
 <!DOCTYPE html>
-<html lang="pt-BR"> <!-- Language set to Brazilian Portuguese -->
-<head> <!-- Metadata and links for the portfolio page -->
-  <meta name="description" content="Seja Bem-Vindo ao meu Portfólio aqui você encontrará minhas Artes e Projetos de Design Gráfico."> <!-- Description of the portfolio -->
-  <meta charset="UTF-8"> <!-- Character encoding for the document -->
-  <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Responsive design for mobile devices -->
-  <meta name="author" content="DexTheory"> <!-- Author of the portfolio -->
-  
-  <title>DexTheory | Portfólio</title> <!-- Title of the portfolio page -->
-  
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"> <!-- Bootstrap CSS for responsive design and styling -->
+<html lang="pt-BR">
+  <head>
+    <!-- Meta tags for character set, viewport, author, description, and keywords -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="DexTheory">
+    <meta name="description" content="Seja Bem-Vindo ao meu Portfólio aqui você encontrará minhas Artes e Projetos de Design Gráfico.">
+    <meta name="keywords" content="DexTheory, Portfólio, Design Gráfico, UX Design, Ilustração, Arte Digital">
+    
+  <title>DexTheory | Portfólio</title>
 
-  <!-- Favicon padrão para navegadores -->
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="48x48" href="assets/icons/favicon-48x48.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="assets/icons/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="128x128" href="assets/icons/favicon-128x128.png">
+    <!-- Favicon padrão para navegadores -->
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="assets/icons/favicon-48x48.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/icons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="128x128" href="assets/icons/favicon-128x128.png">
 
-  <!-- Ícone para Apple (iPhone/iPad) -->
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/favicon-180x180.png">
+    <!-- Ícone para Apple (iPhone/iPad) -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/favicon-180x180.png">
 
-  <!-- Ícone para Android / Web Apps -->
-  <link rel="icon" type="image/png" sizes="192x192" href="assets/icons/favicon-192x192.png"> 
+    <!-- Ícone para Android / Web Apps -->
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/icons/favicon-192x192.png"> 
 
-  <!-- Ícone principal para PWA -->
-  <link rel="icon" type="image/png" sizes="512x512" href="/assets/icons/favicon-512x512.png">
+    <!-- Ícone principal para PWA -->
+    <link rel="icon" type="image/png" sizes="512x512" href="/assets/icons/favicon-512x512.png">
 
-  <!-- SVG moderno (opcional) -->
-  <link rel="icon" type="image/svg+xml" href="assets/icons/artdex.svg" sizes="any"> <!-- SVG icon for modern browsers -->
-  <link rel="shortcut icon" href="assets/icons/artdex.svg" sizes="any"> <!-- Fallback for older browsers -->
+    <!-- SVG moderno (opcional) -->
+    <link rel="icon" type="image/svg+xml" href="assets/icons/artdex.svg" sizes="any">
+    <link rel="shortcut icon" href="assets/icons/artdex.svg" sizes="any">
 
-  <!-- CSS e fontes -->
-  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css"> <!-- AOS library for animations -->
-  <link rel="stylesheet" href="style.css"> <!-- Custom CSS for the portfolio -->
-  <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- Preconnect to Google Fonts for performance -->
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!-- Preconnect to Google Fonts with CORS -->
-  <link href="https://fonts.googleapis.com/css2?family=Grenze+Gotisch:wght@100..900&display=swap" rel="stylesheet">  <!-- Custom font from Google Fonts -->
+    <!-- CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
+    <link rel="manifest" href="manifest.json">
+    
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Grenze+Gotisch:wght@100..900&display=swap" rel="stylesheet">
 
-</head> 
-<!-- ====================================================================================================================================================== -->
+</head>
+
 <body>
-  <header>
-    <img class="logo" src="assets/icons/artdex.svg" alt="Logo DexTheory" data-aos="fade-down" data-aos-duration="1000"> <!-- Logo of DexTheory with fade-down animation -->
-      <div class="animationDataAOS" data-aos="fade-down" data-aos-duration="1000">
+    <header>
+
+      <!-- Logo of DexTheory with fade-down animation -->
+      <img class="logo"
+        src="assets/icons/artdex.svg"
+        alt="Logo DexTheory"
+        data-aos="fade-down"
+        data-aos-duration="1000"
+      >
+
+      <div class="animationDataAOS"
+        data-aos="fade-down"
+        data-aos-duration="1000">
+        <!-- Title and Subtitle with fade-down animation -->
         <h1>exTheory</h1>
-      <h3>ILLUSTRATOR & UX DESIGNER</h3>
-    </div>
-  </header>
+        <h3>ILLUSTRATOR & UX DESIGNER</h3>
+      </div>
 
-  <section class="content">
-  <div class="grid">
-    <!-- ARTES -->
-    <img src="assets/img/art1.png" alt="Arte 1" data-aos="zoom-in" data-aos-duration="1200">
-    <img src="assets/img/art2.png" alt="Arte 2" data-aos="zoom-in" data-aos-duration="1300">
-    <img src="assets/img/art3.png" alt="Arte 3" data-aos="zoom-in" data-aos-duration="1400">
-  </div>
-  </section>
+    </header>
 
-<!-- Footer with developer information -->
-<footer>
-    Desenvolvido por <strong>DexTheory</strong> ©2025
-    <br>
-    Todos os direitos reservados.
-</footer>
+    <section class="content">
+      <div class="grid">
+        <!-- ARTES -->
+        <img src="assets/img/art1.png" alt="Arte 1" data-aos="zoom-in" data-aos-duration="1200">
+        <img src="assets/img/art2.png" alt="Arte 2" data-aos="zoom-in" data-aos-duration="1300">
+        <img src="assets/img/art3.png" alt="Arte 3" data-aos="zoom-in" data-aos-duration="1400">
+      </div>
+    </section>
+
+    <!-- Footer with developer information -->
+    <footer>
+      Desenvolvido por <strong>DexTheory</strong> ©2025
+      <br>
+      Todos os direitos reservados.
+    </footer>
   
-  <!-- Scripts for functionality and animations -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script> <!-- Bootstrap JS for interactivity -->
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> <!-- AOS library for scroll animations -->
-  <script>
-    AOS.init(); // Initialize AOS animations
-  </script>
+    <!-- Scripts for functionality and animations -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script> <!-- Bootstrap JS for interactivity -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> <!-- AOS library for scroll animations -->
+    <script src="script.js"></script> <!-- Custom script for additional functionality -->
+    <script>
 
-</body>
+      if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('service-worker.js');
+      }
+
+    </script>
+  </body>
 </html>
