--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
    <span></span>
    <span></span>
    <span></span>
+   <span></span>
+   <span></span>
+   <span></span>
+   <span></span>
   </div>
 
     <header>
@@ -87,9 +91,11 @@
     <section class="content" id="content">
       <div class="grid">
         <!-- ARTES -->
-        <img src="assets/img/art1.png" alt="Arte 1" data-aos="zoom-in" data-aos-duration="1100">
-        <img src="assets/img/art2.png" alt="Arte 2" data-aos="zoom-in" data-aos-duration="1100">
-        <img src="assets/img/art3.png" alt="Arte 3" data-aos="zoom-in" data-aos-duration="1100">
+        <img src="assets/img/art1.png" alt="Arte 1">
+        <img src="assets/img/art2.png" alt="Arte 2">
+        <img src="assets/img/art3.png" alt="Arte 3">
+        <img src="assets/img/art4.png" alt="Arte 4">
+        <img src="assets/img/art5.png" alt="Arte 5">
       </div>
     </section>
     </main>
